# traethlin_gazebo

./: CMakeLists.txt  README.md  package.xml
launch/: gazebo.launch.py
rviz/: traethlin.rviz
worlds/: model.config  traethlin.world
