<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>traethlin_gazebo</name>
  <version>0.1.0</version>
  <description>
    traethlin_gazebo allow simulations of Traethlin in gazebo.
  </description>
  <author email="ffl@aber.ac.uk">Fred Labrosse</author>
  <maintainer email="ffl@aber.ac.uk">Fred Labrosse</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <!--<exec_depend>ros2_launch_util</exec_depend>-->
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>depthai_descriptions</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>traethlin_description</exec_depend>
  <exec_depend>gazebo_ros_ackermann_drive_4wd</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
